--- a/src/style/scss/01_abstracts/variables/_z-index.scss
+++ b/src/style/scss/01_abstracts/variables/_z-index.scss
@@ -1,6 +1,17 @@
-//$z-index-toast: 100000;
-//$z-index-modal: 99999;
-//$z-index-nav: 99998;
-//$z-index-loader: 200;
-//$z-index-tooltip: 10000;
-//$z-index-scroll-top-btn: 999;
+// preloader
+$z-index-preloader: 1100;
+
+// modals
+$z-index-lightbox: 1000; // just for information, z-index for the lightbox is set in its package
+$z-index-modal: 1000;
+$z-index-modal-overlay: $z-index-modal - 1;
+$z-index-course-preview-modal: 1000;
+
+$z-index-scroll-top-btn: 500;
+$z-index-top-progress: 500;
+
+$z-index-course-navbar: 100;
+$z-index-navbar: 100;
+$z-index-navbar-dropdown: $z-index-navbar + 1;
+
+$z-index-course-sidebar: 1;
